[metadata]
name = deepcolor
version=0.0.4
author = Kojima Yasuhiro
author_email = kojima.yasuhiro@med.nagoya-u.ac.jp
description = Analyze colocalization patterns between single cell gene expression profiles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kojikoji/deepcolor
project_urls =
	     Bug Tracker = https://github.com/kojikoji/deepcolor/issues
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: MIT License
	    Operating System :: OS Independent
[options]
package_dir =
	    = src
packages = find:
python_requires = >=3.7
install_requires =
		scanpy>=1.7.2
		torch>=1.7.0+cu111
		plotly>=5.3.1
		plotnine>=0.8.0
		imgaug<0.2.
[options.packages.find]
where = src