[metadata]
name = deepcolor
version=0.0.6
author = Kojima Yasuhiro
author_email = tiisaishima@gmail.com
description = Analyze colocalization patterns between single cell gene expression profiles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kojikoji/deepcolor
project_urls =
	     Bug Tracker = https://github.com/kojikoji/deepcolor/issues
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: MIT License
	    Operating System :: OS Independent
[options]
package_dir =
	    = src
packages = find:
python_requires = >=3.7
install_requires =
		scanpy>=1.7.2
		torch>=1.7.0
		plotly>=5.3.1
		matplotlib<=3.6.3
		plotnine>=0.8.0
[options.packages.find]
where = src